[gd_scene load_steps=5 format=3 uid="uid://dfgu18b1ss3r3"]

[ext_resource type="Script" uid="uid://br4t30fjago2s" path="res://spring.gd" id="1_6vrsj"]
[ext_resource type="Texture2D" uid="uid://bbpyoen7ebsvu" path="res://sprites/Spring.png" id="2_f6w1c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iudvb"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l13eo"]
size = Vector2(14, 1)

[node name="Spring" type="Node2D"]
script = ExtResource("1_6vrsj")

[node name="Spring" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("2_f6w1c")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_iudvb")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_l13eo")
debug_color = Color(0.806236, 0.362654, 0.535087, 0.42)

[node name="Spring2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Spring2" to="." method="_on_spring_2_timeout"]
